- Fix dropdown item spacing

--- a/src/style/extend.css
+++ b/src/style/extend.css
@@ -455,3 +455,7 @@ code {
 .align-baseline {
   align-items: baseline;
 }
+
+.align-center {
+  align-items: center;
+}
